src/tests/fixtures/typename/PropertyTypenameNonStringInitializer.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export class User {
  __typename = 1;
  /** @gqlField */
  name: string = "Alice";
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/typename/PropertyTypenameNonStringInitializer.ts:3:16 - error: Expected `__typename` property initializer to be a string literal. For example: `__typename = "MyType"` or `__typename: "MyType";`.

3   __typename = 1;
                 ~
